# parquet-duckdb-benchmarks

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md
src/analysis/: analysis.ipynb
src/benchmarking/: inner_sorted_join_datasets.py  inner_sorted_join_datasets_byte_stream_split.py  inner_sorted_join_datasets_byte_stream_split_lz4.py  inner_sorted_join_datasets_byte_stream_split_zstd.py  inner_sorted_join_datasets_lz4.py  inner_sorted_join_datasets_zstd.py  join_datasets.py  join_datasets_with_page_index.py  join_tables.py  join_tables_with_page_index.py  sorted_join_datasets.py  sorted_join_datasets_byte_stream_split.py  sorted_join_datasets_byte_stream_split_with_page_index.py  sorted_join_datasets_byte_stream_split_zstd.py  sorted_join_datasets_byte_stream_split_zstd_with_page_index.py  sorted_join_datasets_lz4.py  sorted_join_datasets_with_page_index.py  sorted_join_datasets_zstd.py  sorted_join_datasets_zstd_with_page_index.py  sorted_join_tables.py  sorted_join_tables_with_page_index.py
src/data/: 10000_x_5000_parquet_datasets.py  10000_x_5000_parquet_datasets_with_page_index.py  10000_x_5000_parquet_default_with_page_index.py  6000_x_5000_parquet_datasets.py  6000_x_5000_parquet_datasets_byte_stream_split.py  6000_x_5000_parquet_datasets_byte_stream_split_lz4.py  6000_x_5000_parquet_datasets_byte_stream_split_with_page_index.py  6000_x_5000_parquet_datasets_byte_stream_split_zstd.py  6000_x_5000_parquet_datasets_byte_stream_split_zstd_with_page_index.py  6000_x_5000_parquet_datasets_lz4.py  6000_x_5000_parquet_datasets_zstd.py  6000_x_5000_parquet_datasets_zstd_with_page_index.py  6000_x_5000_parquet_default.py  6000_x_5000_parquet_default_with_page_index.py
